--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -14,7 +14,7 @@ div.row {
     margin-left: 75%;
     width: 20%;
     color: white;
-    background: #333;
+    /* background: #333; */
     border-radius: 10px;
     cursor: pointer;
     /* display: inline-block; */
@@ -34,7 +34,7 @@ div.row {
     height: 435px;
     margin-top: 2%;
     margin-left: 20%;
-    width: 60%;
+    /* width: 60%; */
     /* background: rgba(51, 51, 51, 0.623); */
     border-radius: 10px;
     display: inline-block;
@@ -79,7 +79,7 @@ div.row {
     height: 400px;
     margin: 0;
     width: 100%;
-    background: rgba(51, 51, 51, 0.623);
+    /* background: rgba(51, 51, 51, 0.623); */
     border-radius: 10px;
     display: inline-block;
     padding: 9px 11px 0 0;
