--- a/CSS/estiloIndex.css
+++ b/CSS/estiloIndex.css
@@ -12,10 +12,9 @@ body {
 /* --PÁGINA DE INICIO DE SESIÓN----------------------------------------------------------
 ----------------------------------------------------------------------------------------- */
 
-.row {
+#cajitaInicioSesion {
     max-width: 100%;
     height: auto;
-    margin-left: 20%;
     width: 60%;
     color: white;
     background: #333;
@@ -55,7 +54,7 @@ input {
     height: 500px;
     margin-top: 2%;
     margin-left: 20%;
-    width: 60%;
+    /* width: 60%; */
     background: transparent;
     display: inline-block;
     padding: 9px 11px;
